# AlgoTrading

./: .pre-commit-config.yaml  Algo-Trading.gitignore  Architecture_Globale_Systeme.md  CdC_Projet.md  Guide_CI_et_Environnement_Python.md  Guide_Git_Configuration.md  README.md  TodoList_Projet.md  pyproject.toml  setup.py
.github/workflows/: python-tests.yml
algotrading/: __init__.py  data_loader.py  indicators.py  strategy.py
algotrading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: backtest_example.py
tests/: __init__.py  test_data_loader.py  test_indicators.py  test_setup.py  test_strategy.py
